# cmaklisk

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: BazelAqueryParse.py  BazelInstall.cmake  BazeliskBootstrap.cmake  cmaklisk.cmake
tests/: CMakeLists.txt
tests/test_workspace/: BUILD.bazel  MODULE.bazel  lib.cc  lib.h  main.cc
